...
    <string name="sharing_accept">Accept</string>
    <string name="sharing_decline">Decline</string>
    <string name="sharing_remove">Remove</string>
    <string name="sharing_add_friend">Add friend</string>
    <string name="sharing_friend_code_label">Friend code</string>
    <string name="sharing_send_request">Send request</string>
    <string name="sharing_no_friends">No friends yet</string>
    <string name="sharing_no_friends_hint">Add a friend by their code to share tracks and maps.</string>
    <string name="sharing_create_group">Create group</string>
    <string name="sharing_create">Create</string>
    <string name="sharing_group">Group</string>
    <string name="sharing_group_name_label">Group name</string>
    <string name="sharing_member_count">%d members</string>
...
